<resources>
    <string name="about_technology_intro">"3D Creator is a real-time 3D scanning system based on a single camera. It consists mainly of three mathematical parts:

1) Positioning in 3D space using only camera

2) Point cloud calculation based on two pictures

3) A 3D sculpting algorithm creating the 3D model in real time"</string>
    <string name="about_technology_point_cloud_description">Based on the camera orientation and the captured images we create a <b>point cloud</b>. The point cloud is quite rough, and consists only of points in 3D space and no color. Based on the point cloud information, a <b>mesh</b> is created. This mesh, or \"lump of clay\", is what we will bring to the next stage of the process - the sculpting.</string>
    <string name="about_technology_point_cloud_title">Creating a point cloud</string>
    <string name="about_technology_positioning_description">The first part of the scanning is the calibration step. As you circulate slowly around the object, the camera takes images of the object. The algorithm at work looks for things that stand out in the images. Anything that can be identified and saved as a feature of the object or the surrounding environment, is a <b>feature point</b>. Feature points are used to calculate where in the room the camera is located in relation to the scanned object.</string>
    <string name="about_technology_positioning_title">Positioning in 3D space</string>
    <string name="about_technology_sculpting_description">The mesh is, simply speaking, a bunch of 3D points connected with a wireframe. These points are called <b>vertices</b>. Using the points from the point cloud, the algorithm pulls and pushes the vertices trying to find a nice average place, thus allowing the mesh to shape itself better after the object.</string>
    <string name="about_technology_sculpting_title">Sculpting the mesh</string>
    <string name="about_technology_texture_description">Lastly, the app creates the <b>texture</b>. The texture in this context is the colors of the object. Using a few of the images captured during the sculpting, the colors are projected onto the mesh from different perspectives.</string>
    <string name="about_technology_texture_title">Adding texture</string>
    <string name="backup_sync_account_category">Account</string>
    <string name="backup_sync_delete">Delete account</string>
    <string name="backup_sync_export">Export scanned models and data</string>
    <string name="backup_sync_personal_data">Personal data</string>
    <string name="backup_sync_signed_in">Signed in</string>
    <string name="backup_sync_signout_text">Sign out</string>
    <string name="details_fragment_created">Created: %1$s</string>
    <string name="details_fragment_filesize">Size: %1$s</string>
    <string name="details_fragment_is_improved">This model has been improved</string>
    <string name="details_fragment_number_triangles">%1$s triangles</string>
    <string name="details_fragment_number_vertices">%1$s vertices</string>
    <string name="gallery_preference_network_sync_over_wifi_summary">Only sync over Wi-Fi</string>
    <string name="gallery_preference_network_sync_over_wifi_title">Wi-Fi only</string>
    <string name="gallery_preference_sync_when_charging_summary">Only sync when the device is charging</string>
    <string name="gallery_preference_sync_when_charging_title">Only when charging</string>
    <string name="key_backup_personal_data">key_backup_personal_data</string>
    <string name="pref_key_account">pref_account</string>
    <string name="pref_key_backup_delete_account">key_backup_delete_account</string>
    <string name="pref_key_backup_export_data">key_backup_export_data</string>
    <string name="pref_key_sign_out">pref_sign_out</string>
    <string name="pref_key_sync_over_wifi">pref_sync_over_wifi</string>
    <string name="pref_key_sync_when_charging">pref_sync_when_charging</string>
    <string name="pref_key_transfer_monitor">pref_transfer_monitor</string>
    <string name="screen_event_tips_how_it_works">Tips how it works</string>
    <string name="screen_event_tips_how_to_scan">Tips how to scan</string>
    <string name="screen_event_tips_technology">Tips about the technology</string>
    <string name="screen_event_tips_troubleshooting">Tips troubleshooting</string>
    <string name="screen_event_tips_what_to_scan">Tips what to scan</string>
    <string name="screen_event_tips_where_to_scan">Tips where to scan</string>
    <string name="tip_calibration_description_first">"During calibration, we use the camera to determine the object's position in 3D space.

Move your phone slowly and steadily, using both hands, to avoid blurring the images."</string>
    <string name="tip_calibration_description_second">"Keep an even distance to the object, around 50 cm.

Follow the instructions on the screen, and connect the dots as you capture the person or object.

Make sure to keep the object within the circle during the entire scan."</string>
    <string name="tip_calibration_title">Start with calibration</string>
    <string name="tip_degrade_issues_description">Every time you do a head scan, 3D Creator calibrates the camera on your phone to improve the scan quality. The camera calibration may be affected if you drop your phone, for example. If this happens, go to 3D Creator settings and select Reset camera calibration.</string>
    <string name="tip_degrade_issues_title">I used to do good scans, but the quality has gotten worse</string>
    <string name="tip_dialog_action_open_wizard">action_open_wizard</string>
    <string name="tip_dialog_button_learn_more">LEARN MORE</string>
    <string name="tip_hairstyles_description">"Some hairstyles may be difficult to scan. For example ponytails or other styles where the hair isn't close to the head."</string>
    <string name="tip_hairstyles_short_desc">Some hairstyles may be difficult to scan</string>
    <string name="tip_hairstyles_title">Hairstyles to avoid</string>
    <string name="tip_model_destroyed_description">This could be caused by sculpting for too long, or problems in the environment. If you notice this problem, stop scanning immediately.</string>
    <string name="tip_model_destroyed_title">The model looks OK, but then parts of it get damaged during sculpting.</string>
    <string name="tip_pause_sculpt_issues_description">If the app can’t find enough stable feature points on the object or in the background, the sculpting is paused to prevent damage to the model. To reactivate the sculpting, try sculpting from different angles, and move further away from the object in order to find stable feature points in the viewfinder.</string>
    <string name="tip_pause_sculpt_issues_title">Sculpting stops and the green areas become semi-transparent</string>
    <string name="tip_performance_issues_description">If the phone gets too warm, the performance may be affected. Let the phone cool down before you start a new scan.</string>
    <string name="tip_performance_issues_title">Performance issues during scanning</string>
    <string name="tip_sculpting_description_first">"After the calibration is finished, we create the basic shape of the model.

In the final step - sculpting - you can refine the shape of the model in real-time.

Move your phone slowly around the areas where you want more details. During the sculpting you can go closer to the object."</string>
    <string name="tip_sculpting_description_second">"Sculpt until the shape of the model has enough detail and the surface is smooth.

When sculpting a person, remember to sculpt the face from below to capture the chin. There is no need to sculpt the back of the head.

Sculpting for too long may damage the scan."</string>
    <string name="tip_sculpting_title">Finish up by sculpting</string>
    <string name="tips_category_about_technology_description">Learn about the technology behind 3D Creator</string>
    <string name="tips_category_about_technology_title">About the technology</string>
    <string name="tips_category_how_description">Learn the technique for making good scans</string>
    <string name="tips_category_how_it_works_description">Learn more by watching videos on how to scan</string>
    <string name="tips_category_how_it_works_title">See how it works</string>
    <string name="tips_category_how_title">How to scan</string>
    <string name="tips_category_troubleshooting_description">Some common problems and how you solve them</string>
    <string name="tips_category_troubleshooting_title">Troubleshooting</string>
    <string name="tips_category_what_description">Learn which objects are suitable for scanning</string>
    <string name="tips_category_what_title">What to scan</string>
    <string name="tips_category_where_description">The environment where you scan is important for the result</string>
    <string name="tips_category_where_title">Where to scan</string>
    <string name="wizard_tip_ambient_light_description">Check light conditions in your environment before scanning. Soft, even light gives the best results.</string>
    <string name="wizard_tip_ambient_light_short_desc">Soft, even light conditions give the best results for scanning.</string>
    <string name="wizard_tip_ambient_light_title">Ambient light</string>
    <string name="wizard_tip_avoid_backlight_description">"Windows and other sharp light sources can cause uneven light and shadows, which will make a bad scan.

Try to not cast shadows on the object during scanning."</string>
    <string name="wizard_tip_avoid_backlight_short_desc">Avoid backlight and sharp light sources</string>
    <string name="wizard_tip_avoid_backlight_title">Avoid backlight and sharp light sources</string>
    <string name="wizard_tip_background_movement_description">"Don't scan in an environment where there's background movement (such as outside on a windy day).

Background movement makes it difficult to find stable points in the background, and the quality of the model may be affected."</string>
    <string name="wizard_tip_background_movement_title">Background movement</string>
    <string name="wizard_tip_be_still_description">"The person or object you're scanning needs to be still during the scan. If you are scanning a person it is preferable that they sit down."</string>
    <string name="wizard_tip_be_still_short_desc">It is important that the person or object you are scanning remains still</string>
    <string name="wizard_tip_be_still_title">Keep still</string>
    <string name="wizard_tip_no_glasses_description">"Transparent objects can't be scanned"</string>
    <string name="wizard_tip_no_glasses_title">Remove glasses</string>
    <string name="wizard_tip_space_description">"When scanning a head make sure there's enough space to walk around the object while scanning.

Keep the phone approximately 50 cm (20 in) from the object."</string>
    <string name="wizard_tip_space_title">Space</string>
    <string name="wizard_tip_suitable_objects_description">"Solid, textured objects are suitable for scanning.

Glossy or transparent objects, or objects with holes in them, can't be scanned."</string>
    <string name="wizard_tip_suitable_objects_short_desc">Learn what type of objects make good scans</string>
    <string name="wizard_tip_suitable_objects_title">Suitable objects for scanning</string>
    <string name="wizard_tip_surfaces_description">"Don't scan near large, smooth white or reflective surfaces (such as a big TVs or an entirely white wall)."</string>
    <string name="wizard_tip_surfaces_title">Avoid large white and reflective surfaces</string>
    <string name="wizard_type_about_technology">wizard_type_about_technology</string>
    <string name="wizard_type_action">wizard_type_action</string>
    <string name="wizard_type_list">wizard_type_list</string>
    <string name="youtube_tutorial_video_url">https://youtube.com/channel/UC8gM-HlzAKz-2prVXvKCc2w</string>
</resources>